<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.lappsgrid</groupId>
  <artifactId>sparser</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>war</packaging>
  <name>LISP Example</name>
  <description>
      Lapps Web Services wrapping example for lisp hello-world
  </description>

    <properties>
        <lapps.version>2.0.0</lapps.version>
        <lapps.core.version>2.0.0</lapps.core.version>
        <lapps.discriminator>2.0.1</lapps.discriminator>
        <vocabulary.version>1.0.0</vocabulary.version>
        <serialization.version>2.0.0</serialization.version>
    </properties>


  <dependencies>
      <!-- V LappsGrid API dependencies -->
      <dependency>
          <groupId>org.lappsgrid</groupId>
          <artifactId>api</artifactId>
          <version>${lapps.version}</version>
      </dependency>

      <dependency>
          <groupId>org.lappsgrid</groupId>
          <artifactId>core</artifactId>
          <version>${lapps.core.version}</version>
      </dependency>
      <dependency>
          <groupId>org.lappsgrid</groupId>
          <artifactId>discriminator</artifactId>
          <version>${lapps.discriminator}</version>
      </dependency>
      <dependency>
          <groupId>org.lappsgrid</groupId>
          <artifactId>serialization</artifactId>
          <version>${serialization.version}</version>
      </dependency>
      <dependency>
          <groupId>org.lappsgrid</groupId>
          <artifactId>vocabulary</artifactId>
          <version>${vocabulary.version}</version>
      </dependency>

      <!-- U LappsGrid API dependencies -->

      <!-- V Groovy dependencies -->
      <dependency>
          <groupId>org.codehaus.groovy</groupId>
          <artifactId>groovy-all</artifactId>
          <version>2.4.3</version>
      </dependency>

      <!-- U Groovy dependencies -->


      <!--&lt;!&ndash; V CRaSH API dependencies &ndash;&gt;-->
      <!--<dependency>-->
          <!--<groupId>org.crsh</groupId>-->
          <!--<artifactId>crsh.shell.core</artifactId>-->
          <!--<version>1.2.11</version>-->
      <!--</dependency>-->
      <!--&lt;!&ndash; U CRaSH API dependencies &ndash;&gt;-->

      <!-- V ServiceGrid API dependencies -->
      <dependency>
          <groupId>org.lappsgrid</groupId>
          <artifactId>service-grid-libs</artifactId>
          <version>1.1.0</version>
      </dependency>
      <!-- U ServiceGrid API dependencies -->

      <!-- V CLOJURE API dependencies -->
      <dependency>
          <groupId>org.clojure</groupId>
          <artifactId>clojure</artifactId>
          <version>1.7.0</version>
      </dependency>

      <!-- U CLOJURE API dependencies -->

      <!-- V ABCL API dependencies -->
      <dependency>
          <groupId>org.armedbear.lisp</groupId>
          <artifactId>abcl</artifactId>
          <version>1.0.1</version>
      </dependency>
      <!-- U ABCL API dependencies -->

      <dependency>
          <groupId>commons-io</groupId>
          <artifactId>commons-io</artifactId>
          <version>2.4</version>
      </dependency>


      <!-- V SLF4J API dependencies -->
      <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-simple</artifactId>
          <version>1.6.4</version>
      </dependency>

      <!-- U SLF4J API dependencies -->

      <!-- V JUNIT dependencies -->
      <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
         <version>4.8.1</version>
         <scope>test</scope>
      </dependency>

      <!-- U JUNIT dependencies -->

  </dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<version>2.7.2</version>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
					<!-- mvn test: java.lang.OutOfMemoryError: Java heap space -->
				</configuration>
			</plugin> 
			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>maven-jetty-plugin</artifactId>
				<version>6.1.10</version>
				<configuration>
					<scanIntervalSeconds>10</scanIntervalSeconds>
					<connectors>
						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
							<port>4040</port>
							<maxIdleTime>60000</maxIdleTime>
						</connector>
					</connectors>
				</configuration>
			</plugin>
		</plugins>
	</build>



    <repositories>
        <repository>
            <id>thirdparty</id>
            <url>http://eldrad.cs-i.brandeis.edu:6061/nexus/content/repositories/thirdparty</url>
        </repository>
        <repository>
            <id>anc-releases</id>
            <url>http://www.anc.org:8080/nexus/content/repositories/releases/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>anc-snapshots</id>
            <url>http://www.anc.org:8080/nexus/content/repositories/snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
        <!-- Repositories below this point will likely be phased out. -->
    </repositories>
</project>
